--- a/assignment/appsettings.json
+++ b/assignment/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  // Sqlite ConnectionString
+  "ConnectionStrings": {
+    "EmployeeContacDB": "Data Source=Database/employee_contac.db"
+  }
 }
